[metadata]
license_file = LICENSE

[bumpversion]
current_version = 0.0.1
files = ./scrapfly/__init__.py
allow_dirty = True
commit = False
tag = False
tag_name = {new_version}


[pep8]
max-line-length=160

[easy_install]
zip_ok = false

[flake8]
ignore = N801,N802,N803,E226,W504,E252,E301,E302,E704,W503,W504,F811
max-line-length=160

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True

[report]
exclude_lines =
    @abc.abstractmethod
    @abstractmethod

[mypy]
follow_imports = silent
strict_optional = True
warn_redundant_casts = True
check_untyped_defs = True
disallow_any_generics = True
disallow_untyped_defs = True
warn_unused_ignores = True


[mypy-brotli]
ignore_missing_imports = true


[mypy-chardet]
ignore_missing_imports = true


[mypy-cchardet]
ignore_missing_imports = true


[mypy-idna_ssl]
ignore_missing_imports = true
